src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT022.snap
---
source: src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    UselessYieldFixture: error
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 18
  fix:
    content: return
    location:
      row: 17
      column: 4
    end_location:
      row: 17
      column: 9
  parent: ~

