src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT025.snap
---
source: src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    ErroneousUseFixturesOnFixture: ~
  location:
    row: 9
    column: 1
  end_location:
    row: 9
    column: 29
  fix:
    content: ""
    location:
      row: 9
      column: 0
    end_location:
      row: 10
      column: 0
  parent: ~
- kind:
    ErroneousUseFixturesOnFixture: ~
  location:
    row: 16
    column: 1
  end_location:
    row: 16
    column: 29
  fix:
    content: ""
    location:
      row: 16
      column: 0
    end_location:
      row: 17
      column: 0
  parent: ~

